--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon api/index.js",
-    "start": "node api/index.js"
+    "dev": "nodemon --watch \"api/**\" --ext \"ts,json\" --exec \"ts-node api/index.ts\""
   },
   "keywords": [],
   "author": "",
@@ -16,5 +15,10 @@
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.6",
+    "ts-node": "^10.9.2"
   }
 }
