--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch \"api/**\" --ext \"ts,json\" --exec \"ts-node api/index.ts\""
+    "dev": "nodemon --watch \"api/**\" --ext \"ts,json\" --exec \"ts-node api/index.ts\"",
+    "build":"npm install && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
