--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "blog": "file:..",
     "firebase": "^10.7.2",
     "flowbite-react": "^0.7.2",
     "moment": "^2.30.1",
