--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "type": "commonjs",
   "main": "index.js",
+  "module": "commonjs",
   "scripts": {
     "dev": "nodemon --watch \"api/**\" --ext \"ts,json\" --exec \"ts-node api/index.ts\"",
-    "build":"npm install && npm install --prefix client && npm run build --prefix client"
+    "build":"npm install && npm install --prefix client && npm run build --prefix client",
+    "build-ts": "tsc"
   },
   "keywords": [],
   "author": "",
